<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/noaddress_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noaddress"
        android:textColor="#ff0008"
        android:visibility="invisible" />


    <EditText
        android:id="@+id/branch_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/address"
        android:textAlignment="viewEnd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/New_Branch_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel_login2"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/NewBranch__delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="delete2"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textSize="20sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/New_Branch_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="create"
            android:text="@string/add"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/capture"/>

</LinearLayout>